fix(): eo-directory-tree not render collapsed item

--- a/bricks/basic/src/mini-actions/styles.shadow.css
+++ b/bricks/basic/src/mini-actions/styles.shadow.css
@@ -35,6 +35,7 @@ eo-icon {
   height: 22px;
   cursor: pointer;
   border-radius: var(--medius-border-radius);
+  color: var(--text-color-default);
 }
 
 .button-item:not(.disabled):hover {
